--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
 body{
-	
+	background-color: 
+}
+h1 {
+	color: darkblue;
+}
+div.shape{
+	background-color: yellowgreen;
+	width: 1370px;
+	height: 420px;
+	margin: -10px;
 }
